# sign-lang-gen

./: .env.example  .gitignore  ATTRIBUTION.md  CLAUDE.md  LICENSE  Makefile  PROGRESS.md  README.md  ROADMAP.md  compass_artifact_wf-b82c963b-6678-57bb-9e1f-b5683d7fbc35_text_markdown.md  pyproject.toml  requirements.txt
configs/: asllrp_baseline.yaml  asllrp_context.yaml  asllrp_context_rag.yaml  asllrp_rag.yaml  baseline.yaml  context_only.yaml  context_plus_rag.yaml  ncslgr_baseline_multiprompt.yaml  ncslgr_rag.yaml  ncslgr_rag_anon.yaml  probes_baseline.yaml  probes_context.yaml  rag_only.yaml
docs/: architecture.md  datasets.md  decision_log.md  error_taxonomy.md  faithful_reproduction_plan.md  gloss_conventions.md  isl_extension.md  landscape_generative_slg.md  nmm_annotation_rubric.md  primary_source_findings.md  related_work.md  results_report.md  results_report_asllrp.md
probes/: README.md  discourse_probes_v0.jsonl
prompts/: asllrp_context_gloss.md  asllrp_gloss.md  baseline_gloss.md  baseline_nmm.md  context_gloss.md  isl_gloss.md
results/: summary.csv
scripts/: build_gloss_dictionary.py  build_index.py  build_probe_split.py  download_data.py  evaluate.py  nmm_annotation.py  run_asllrp_full.ps1  run_experiment.py
src/aslgloss/: __init__.py  config.py
src/aslgloss/baseline/: __init__.py  gloss.py  nmm.py  vocab.py
tests/: test_anonymize.py  test_asllrp.py  test_asllrp_clean.py  test_context_buffer.py  test_error_analysis.py  test_metrics.py  test_multiprompt.py  test_ncslgr.py  test_nmm_agreement.py  test_probes.py  test_vocab.py
(+17 files in other folders)
