[project]
name = "aslgloss"
version = "0.1.0"
description = "Paragraph-level context and RAG example retrieval for English-to-ASL gloss generation (IMT 600, Summer 2026)"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
